cluster/apps/networking/traefik/middleware/authentik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authentik
  namespace: networking
spec:
  forwardAuth:
    #address: http://authentik-outpost-example-outpost:9000/akprox/auth/traefik
    address: http://ip.fabricesemti.net:9000/akprox/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - Set-Cookie
      - X-Auth-Username
      - X-Auth-Groups
      - X-Forwarded-Email
      - X-Forwarded-Preferred-Username
      - X-Forwarded-User
