cluster/apps/networking/traefik/middleware/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: security
  labels:
    app: traefik
spec:
  routes:
    - kind: Rule
      match: "Host(`id.${SECRET_DOMAIN})"
      middlewares:
        - name: authentik
          namespace: security
      priority: 10
      services: # Unchanged
    # # This part is only required for single-app setups
    # - kind: Rule
    #   match: "Host(`*external host that you configured in authentik*`) && PathPrefix(`/akprox/`)"
    #   priority: 15
    #   services:
    #     - kind: Service
    #       name: authentik-outpost-example-outpost
    #       port: 9000
